--- a/libusb/ddk_make/make.cfg
+++ b/libusb/ddk_make/make.cfg
@@ -22,11 +22,11 @@ VERSION=!VERSION_MAJOR!.!VERSION_MINOR!.!VERSION_MICRO!.!VERSION_NANO!
 ;
 ; Default WinDDK directory(s) Adjust these values to match your environment
 ; (REQUIRED)
-WINDDK_BASE=Z:\WinDDK
-WINDDK_DIR=!WINDDK_BASE!\6001.18002\
+WINDDK_BASE=C:\WinDDK
+WINDDK_DIR=!WINDDK_BASE!\7600.16385.1\
 ;
 ; (optional)
-WINDDK_W2K_DIR=!WINDDK_BASE!\6001.18002\
+WINDDK_W2K_DIR=!WINDDK_BASE!\7600.16385.1\
 
 ;
 LIBWDI_DIR=..\projects\additional\libwdi\
