Continue on error

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -44,6 +44,7 @@ jobs:
   - script: |
       cd libusb\ddk_make
       make.cmd dist
+    continueOnError: true
     displayName: 'Building distribution'
 
   - task: PublishBuildArtifacts@1
